--- a/atlasdb-cassandra/build.gradle
+++ b/atlasdb-cassandra/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     exclude(group: 'com.carrotsearch', module: 'hppc')
   }
 
-  explicitShadow 'com.datastax.cassandra:cassandra-driver-core:' + libVersions.cassandra_driver_core
+  explicitShadow ('com.datastax.cassandra:cassandra-driver-core:' + libVersions.cassandra_driver_core) {
+    exclude(group: 'com.codahale.metrics', module: 'metrics-core')
+  }
   explicitShadow group: 'com.google.guava', name: 'guava'
 
   explicitShadow 'org.apache.commons:commons-pool2:2.4.2'
