--- a/atlasdb-dbkvs-hikari/build.gradle
+++ b/atlasdb-dbkvs-hikari/build.gradle
@@ -6,7 +6,7 @@ apply from: '../gradle/shared.gradle'
 dependencies {
   compile project(':commons-db')
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
-  compile group: 'com.codahale.metrics', name: 'metrics-core'
+  compile group: 'io.dropwizard.metrics', name: 'metrics-core'
 
   processor group: 'org.immutables', name: 'value'
 }
